--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: #e2c7ec;
+  background-color: #FFFFFF;
   height: 100%;
   display: flex;
   flex-direction: column;
